# cnpy

./: .gitignore  CMakeLists.txt  cnpy_mmap.cpp  cnpy_mmap.h  main.cc
